* Server stored avatars not were not aligned properly in the forum profile section. (index.css) [Bug 3661]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8872 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2469,6 +2469,11 @@ dl
 	margin-bottom: 10px;
 }
 
+#avatar_server_stored div
+{
+	float: left;
+}
+
 #main_admsection #basicinfo, #main_admsection #detailedinfo
 {
 	width: 100%;
@@ -3154,9 +3159,3 @@ span.hidelink
 {
 	clear: right;
 }
-
-
-
-
-
-
